--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Decision making app that cures analysis paralysis"
+    />
+    <meta name="keywords" content="decision making, analysis paralysis" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "headline": "Chooseday",
+        "description": "Decision making app that cures analysis paralysis",
+        "url": "https://chooseday.app",
+        "author": {
+          "@type": "Person",
+          "name": "Neil MacMunn"
+        }
+      }
+    </script>
     <title>Chooseday</title>
   </head>
 
